--- a/src/mypage_beginning.html
+++ b/src/mypage_beginning.html
@@ -1,15 +1,31 @@
 <!DOCTYPE html>
 <html>
  <head>
-    <title>Mi página personal</title>
+    <title>Mi página</title>
+    <style>
+      h2 {
+        color: red;
+        font-size: 26px;
+      }
+      p {
+        color: blue;
+        font-family: fantasy;
+        font-size: medium;
+        font-size: 23px;
+      }
+      table {
+        color: rgb(191, 10, 10);
+      }
+    </style>
  </head>
  <body>
   <h1>Mi página personal</h1>
   <h2>¡Hola!</h2>
+  <h2>Descripción</h2>
   <p>
-    Bienvenido a mi página personal. Soy Kelly, me gusta enseñar Ing de Sw a niñ@s y jóvenes. En esta página, compartiré información sobre mí.
+    Bienvenido a mi página personal. Soy Valentina, estudio ingenieria de sistemas en la universidad de los Andes y amo a mi gata. En esta página, compartiré información sobre mí.
   </p> 
-  <img src="img/WallpaperDISC.png" alt="Mi Foto" width="500" height="333">
+  <img src="img/pandorayyo.jpeg" alt="Foto pandora" width="500" height="666">
   <table>
     <tr>
         <th>Lenguajes de programación</th>
@@ -17,11 +33,8 @@
     </tr>
     <tr>
         <td>Java, Python</td>
-        <td>Español, Inglés, Francés</td>
+        <td>Español, Inglés</td>
     </tr>
   </table>  
-  <p>
-  <a href="https://profesores.virtual.uniandes.edu.co/kjgarces971/es/inicio/" target="_blank">Página institucional</a>
-  </p>
   </body>
 </html>
