--- a/src/mypersonalpage.html
+++ b/src/mypersonalpage.html
@@ -13,25 +13,24 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col">
-                <img src="img/WallpaperDISC.png" alt="Mi Foto" class="img-fluid rounded-circle">
+                <img src="img/pandorayyo.jpeg" alt="Mi Foto" class="img-fluid rounded-circle" style="width: 800px; height: 900px;">
             </div>
             <div class="col">
                 <h2>¡Hola!</h2>
-                <p>Bienvenido a mi página personal. Soy Kelly, me gusta enseñar Ing de Sw a niñ@s y jóvenes. En esta página, compartiré información sobre mí.</p>
+                <p>Bienvenido a mi página personal. Soy Valentina, estudio ingeniería de sistemas en la Universidad de los Andes y amo a mi gata. En esta página, compartiré información sobre mí.</p>
             </div>
         </div>
         <div class="row">
             <div class="col">
-                <h3>Habilidad 1</h3>
-                <p>Descripción de la Habilidad 1.</p>
+                <h3>Actividades</h3>
+                <p>Pertenecí a la selección de natación</p>
             </div>
             <div class="col">
-                <h3>Habilidad 2</h3>
-                <p>Descripción de la Habilidad 2.</p>
+                <h3>Estudio</h3>
+                <p>Uniandes, Ing de sistemas.</p>
             </div>
         </div>
     </div>
-       
-    
 </body>
 </html>
+
